# CES

./: .gitignore  CMakeLists.txt  Notes  README.md  hola.txt  main.cpp
Containers/: SoundBufferContainer.cpp  SoundBufferContainer.h  TextureContainer.cpp  TextureContainer.h
Entities/: Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  Platform.cpp  Platform.h  Player.cpp  Player.h
Input/: Controller.cpp  Controller.h
LevelManager/: Stage.cpp  Stage.h
Levels/: stage1.txt
SoundManager/: SoundManager.cpp  SoundManager.h
Sprite WOrk/: background.xcf  brownBrick.xcf  greenBlob.xcf  heartSprite.xcf  pisito.xcf  smallBrownBrick.xcf  testSprite256.xcf
Utilities/: Camera.cpp  Camera.h  CircularList.cpp  CircularList.h  GameStates.h  MenuStates.h  Point.cpp  Point.h  Transition.cpp  Transition.h  Window.h
cmake_modules/: FindSFML.cmake  old.cmake
doc/html/: classsf_1_1Vector2.html  classsf_1_1Vector3.html
